<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EmployeeDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="0dp"
        android:layout_height="@dimen/_184sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/imgPerson"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/placeholder"
            android:contentDescription="@string/image" />

        <TextView
            android:textColor="@color/white"
            android:textSize="24sp"
            android:id="@+id/tvPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/underscore"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:textColor="@color/black"
        android:textSize="24sp"
        android:id="@+id/tvDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTop" />

    <TextView
        android:id="@+id/tvLabelUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/tvDetails"
        app:layout_constraintTop_toBottomOf="@+id/tvDetails" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabelUserName"
        app:layout_constraintTop_toTopOf="@+id/tvLabelUserName" />

    <TextView
        android:id="@+id/tvLabelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/tvLabelUserName"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelUserName" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabelEmail"
        app:layout_constraintTop_toTopOf="@+id/tvLabelEmail" />

    <TextView
        android:id="@+id/tvLabelPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="@+id/tvLabelEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelEmail" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabelPhone"
        app:layout_constraintTop_toTopOf="@+id/tvLabelPhone" />

    <TextView
        android:id="@+id/tvLabelWebSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/website"
        app:layout_constraintStart_toStartOf="@+id/tvLabelPhone"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelPhone" />

    <TextView
        android:id="@+id/tvWebSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelWebSite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabelWebSite"
        app:layout_constraintTop_toTopOf="@+id/tvLabelWebSite" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelWebSite" />

    <TextView
        android:textSize="24sp"
        android:textColor="@color/black"
        android:id="@+id/tvCompanyDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/company_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/tvLabelCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/company_name"
        app:layout_constraintStart_toStartOf="@+id/tvCompanyDetails"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyDetails" />

    <TextView
        android:id="@+id/tvCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelCompanyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabelCompanyName"
        app:layout_constraintTop_toTopOf="@+id/tvLabelCompanyName" />

    <TextView
        android:id="@+id/tvLabelCatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/catch_phrase"
        app:layout_constraintStart_toStartOf="@+id/tvLabelCompanyName"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCompanyName" />

    <TextView
        android:id="@+id/tvCatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelCatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabelCatch"
        app:layout_constraintTop_toTopOf="@+id/tvLabelCatch" />

    <TextView
        android:id="@+id/tvLabelBs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bs"
        app:layout_constraintStart_toStartOf="@+id/tvLabelCatch"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelCatch" />

    <TextView
        android:id="@+id/tvBs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="@+id/tvLabelBs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvLabelBs"
        app:layout_constraintTop_toTopOf="@+id/tvLabelBs" />

    <View
        android:background="@color/black"
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLabelBs" />

    <TextView
        android:textSize="24sp"
        android:textColor="@color/black"
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/tvAddressDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/underscore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvAddress"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>